Updated about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <h1>About URLLibrary</h1>
-    <p>This is a paragraph about myself.</p>
+    <p>I am a graduate of the Townview Science and Engineering Magnet School in Dallas, Texas and a current second-year CS student at the University of Texas at Austin. My interests are programming languages, AI/Machine Learning, music and soccer. My passion is developing software that helps the homeless people and tries to address poverty and hunger among the underprivileged among us. I have experience programming in Java, HTML/JavaScript, Swift, Python, React Native and C++. I have been attended courses related IoT, Machine Learning and programming through Harvard Extension program. Completed tall courses required for Graduate Certificate in Data Science from Harvard Extension Program. Interested to volunteer for projects that are trying to address problems related to homelessness, poverty and hunger. Also open to other challenging projects where I can leverage my skills and learn.</p>
 {% endblock %}
